network_policy_tenancy/tenant-a/namespace-isolated.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tenant-a
  labels:
    tenant: a
  annotations:
    net.beta.kubernetes.io/network-policy: |
      {
        "ingress": {
          "isolation": "DefaultDeny"
        }
      }
