network_policy_tenancy/tenant-a/namespace-no-isolation.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tenant-a
  labels:
    tenant: a
