network_policy_tenancy/tenant-a/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tenant-a
  name: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    demo: redis
