network_policy_tenancy/tenant-a/frontend-policy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  namespace: tenant-a
  name: frontend
spec:
  # Apply this policy to frontend pods.
  podSelector:
    matchLabels:
      demo: frontend
  ingress:
    # Allow from any source.
    - ports:
      # But only on TCP port 80.
      - port: 80
        protocol: TCP
